# hancat-core

./: Cargo.toml  README.md
src/: lib.rs
tests/: modify.rs  modify_sentence.rs
