[package]
name = "hancat-core"
version = "0.8.0"
edition = "2024"
authors = ["TossiCat"]
description = "tossicat-core(토시(조사))와 yongcat(용언 활용)을 통합하는 한국어 텍스트 처리 라이브러리"
license = "MIT"
repository = "https://github.com/tossicat/hancat-core"
keywords = ["hangul", "hangeul", "library", "lib"]
categories = ["development-tools", "text-processing"]

[dependencies]
tossicat = { version = "0.8", optional = true }
yongcat = { version = "0.8", optional = true }

[features]
default = ["tossi", "yongeon"]
tossi = ["dep:tossicat"]
yongeon = ["dep:yongcat"]
grade-a = ["yongeon", "yongcat/grade-a"]
grade-b = ["yongeon", "yongcat/grade-b"]
