[package]
name = "hancat-core"
version = "0.8.0"
edition = "2024"
authors = ["TossiCat"]
description = "함수 하나로 토시 변환과 용언 활용을 {단어, 접사} 템플릿으로 자동 처리하는 라이브러리"
license = "MIT"
repository = "https://github.com/tossicat/hancat-core"
keywords = ["hangul", "hangeul", "library", "lib"]
categories = ["development-tools", "text-processing"]

[dependencies]
tossicat = { version = "0.8", optional = true }
yongcat = { version = "0.8", optional = true }

[features]
default = ["tossi", "yongeon"]
tossi = ["dep:tossicat"]
yongeon = ["dep:yongcat"]
grade-a = ["yongeon", "yongcat/grade-a"]
grade-b = ["yongeon", "yongcat/grade-b"]
